--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<div class="side-menu" id="side-menu">
 			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png" alt=""></div>
 			<div class="user">
-				<img src="images/creator/roshan.jpeg" alt="Username">
-				<p>roshank9419</p>
+				<img src="images/creator/nirjhar.jpeg" alt="Username">
+				<p>nirjhark9419</p>
 			</div>
 			<ul>
 				<li><a class="active" href="">Home</a></li>
@@ -182,7 +182,7 @@
 		<div class="csec"></div>
 		<div class="back-contact">
 			<div class="cc">
-			<form action="mailto:roshank9419@gmail.com" method="post" enctype="text/plain">
+			<form action="mailto:divergemindsacademy@gmail.com" method="post" enctype="text/plain">
 				<label>First Name <span class="imp">*</span></label><label style="margin-left: 185px">Last Name <span class="imp">*</span></label><br>
 				<center>
 				<input type="text" name="" style="margin-right: 10px; width: 175px" required="required"><input type="text" name="lname" style="width: 175px" required="required"><br>
