--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 					<a href="#"><img src="images/icon\ytube.png"></a>
 					<a href="#"><img src="images/icon\linkedin.png"></a>
 				</div><br><br>
-				<p class="rights-text">Copyright © 2024 Nirjhar Nath, Diverge Minds Academy</p>
+				<p class="rights-text">Copyright © 2024, Diverge Minds Academy</p>
 				<!-- <br><p><img src="images/icon/location.png"> Chennai Mathematical Institute<br>SIPCOT IT Park, Siruseri - 603103</p><br> -->
 				<p><img src="images/icon/phone.png"> +91-xxxx-xxx-xxx<br><img src="images/icon/mail.png">&nbsp; divergemindsacademy@gmail.com</p>
 			</div>
