--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 		<div class="side-menu" id="side-menu">
-			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png" alt=""></div>
+			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close-button.png" alt=""></div>
 			<div class="user">
 				<img src="images/creator/nirjhar.jpeg" alt="Username">
 				<p>nirjhark9419</p>
