--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</ul>
 			<div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="images/development/search-icon.png" alt="search" onclick=slide()></div>
 			<a class="get-started" href="login.html">Get Started</a>
-			<img src="images/icon/menu.png" class="menu" onclick="sideMenu(0)" alt="menu">
+			<img src="images/icon/menu-button.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
 		<div class="logo-container">
 			<img src="images/icon/logo_only.png" alt="Logo">
