--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<div class="side-menu" id="side-menu">
 			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close-button.png" alt=""></div>
 			<div class="user">
-				<img src="images/creator/nirjhar.jpeg" alt="Username">
-				<p>nirjhark9419</p>
+				<img src="images/icon/main_justlogo.png" alt="DivergeMinds">
+				<p>Diverge Minds Academy</p>
 			</div>
 			<ul>
 				<li><a class="active" href="">Home</a></li>
