--- a/index.html
+++ b/index.html
@@ -182,18 +182,25 @@
 		<div class="csec"></div>
 		<div class="back-contact">
 			<div class="cc">
-			<form action="mailto:divergemindsacademy@gmail.com" method="post" enctype="text/plain">
-				<label>First Name <span class="imp">*</span></label><label style="margin-left: 185px">Last Name <span class="imp">*</span></label><br>
-				<center>
-				<input type="text" name="" style="margin-right: 10px; width: 175px" required="required"><input type="text" name="lname" style="width: 175px" required="required"><br>
-				</center>
-				<label>Email <span class="imp">*</span></label><br>
-				<input type="email" name="mail" style="width: 100%" required="required"><br>
-				<label>Message <span class="imp">*</span></label><br>
-				<input type="text" name="message" style="width: 100%" required="required"><br>
-				<label>Additional Details</label><br>
-				<textarea name="addtional"></textarea><br>
-				<button type="submit" id="csubmit">Send Message</button>
+			<form id="contact-form">
+  				<div style="display: flex; justify-content: center; gap: 10px;">
+    				<div>
+      				<label>First Name <span class="imp">*</span></label><br>
+      				<input type="text" name="fname" style="width: 175px" required>
+    				</div>
+    				<div>
+      				<label>Last Name <span class="imp">*</span></label><br>
+      				<input type="text" name="lname" style="width: 175px" required>
+    				</div>
+  				</div>
+  				<br>
+  				<label>Email <span class="imp">*</span></label><br>
+  				<input type="email" name="mail" style="width: 100%" required><br>
+  				<label>Message <span class="imp">*</span></label><br>
+  				<input type="text" name="message" style="width: 100%" required><br>
+  				<label>Additional Details</label><br>
+  				<textarea name="additional" style="width: 100%"></textarea><br>
+  				<button type="submit" id="csubmit">Send Message</button>
 			</form>
 			</div>
 		</div>
@@ -245,6 +252,31 @@
     .then(data => {
       alert("Thank you! Your email has been submitted.");
       document.querySelector('.txtb').value = ""; // clear input
+    })
+    .catch(err => {
+      console.error("Error:", err);
+      alert("Oops! Something went wrong.");
+    });
+  });
+</script>
+
+<script>
+  document.getElementById("contact-form").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const formData = new FormData(this);
+
+    fetch("https://script.google.com/macros/s/AKfycbyTk8Px4w_4TZddMPzdoEITvdIVr-wE22gDFzoH84YhLav2u0Lxn2D3oD3OkiNaytcW7g/exec", {
+      method: "POST",
+      body: new URLSearchParams(formData),
+      headers: {
+        "Content-Type": "application/x-www-form-urlencoded"
+      }
+    })
+    .then(res => res.text())
+    .then(data => {
+      alert("Thank you! Your message has been sent.");
+      document.getElementById("contact-form").reset();
     })
     .catch(err => {
       console.error("Error:", err);
