--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<li><a href="#contactus_section">Contact</a></li>
 			</ul>
 			<div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="images/development/search-icon.png" alt="search" onclick=slide()></div>
-			<a class="get-started" href="login.html">Get Started</a>
+			<a class="get-started" href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank">Get Started</a>
 			<img src="images/icon/menu-button.png" class="menu" onclick="sideMenu(0)" alt="menu">
 		</nav>
 		<div class="logo-container">
@@ -120,14 +120,14 @@
 	<br><br>
 	<div class="course">
 		<center><div class="course_box" id="courses_section">
-		<div class="det"><a href="subjects/jee.html"> ISI Entrance</a></div>
-		<div class="det"><a href="subjects/gate.html"> CMI Entrance</a></div>
-		<div class="det"><a href="subjects/jee.html#sample_papers"> Sample Papers</a></div>
+		<div class="det"><a href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank"> ISI Entrance</a></div>
+		<div class="det"><a href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank"> CMI Entrance</a></div>
+		<div class="det"><a href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank"> Sample Papers</a></div>
 		</div></center>
 		<div class="course_box">
-		<div class="det"><a href="subjects/computer_courses.html#data"> Math Olympiads</a></div>
-		<div class="det"><a href="subjects/computer_courses.html#algo"> JEE Preparation</a></div>
-		<div class="det det-last"><a href="subjects/computer_courses.html#projects"> Quizzes</a></div>
+		<div class="det"><a href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank"> Math Olympiads</a></div>
+		<div class="det"><a href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank"> JEE Preparation</a></div>
+		<div class="det"><a href="https://forms.gle/RGhjmmsEFkusNJKN7" target="_blank"> Quizzes</a></div>
 		</div>
 	</div>
 
@@ -138,14 +138,14 @@
 		<div class="diffSection" id="services_section">
 		<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: #fff;">Services</p></center>
 		</div>
-		<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/computer-courses.png"><p>Free Online Trial Courses</p></div></a>
-		<a href="subjects/jee.html"><div class="s-card"><img src="images/icon/brainbooster.png"><p>Building Concepts for Competitive Exams</p></div></a>
-		<a href="#"><div class="s-card"><img src="images/icon/online-tutorials.png"><p>Online Video Lectures</p></div></a>
-		<a href="subjects/jee.html#sample_papers"><div class="s-card"><img src="images/icon/papers.jpg"><p>Weekly Problem Sets</p></div></a>
-		<a href="#"><div class="s-card"><img src="images/icon/p3.png"><p>Daily Brain Teasers</p></div></a>
-		<a href="#contactus_section"><div class="s-card"><img src="images/icon/discussion.png"><p>Discussion with Our Tutors</p></div></a>
-		<a href="subjects/quiz.html"><div class="s-card"><img src="images/icon/q1.png"><p>Daily Brain Teasers</p></div></a>
-		<a href="#contactus_section"><div class="s-card"><img src="images/icon/help.png"><p>Course Materials</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/free_online_trial_courses.png"><p>Free Online Trial Courses</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/competitive_exams.png"><p>Building Concepts for Competitive Exams</p></div></a>
+		<a href="https://www.youtube.com/@DivergeMindsAcademy"><div class="s-card"><img src="images/icon/online_video_lectures.png"><p>Online Video Lectures</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/weekly_problem_sets.png"><p>Weekly Problem Sets</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/daily_brain_teasers.png"><p>Daily Brain Teasers</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/discussion_with_tutors.png"><p>Discussion with Our Tutors</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/open_discussion_forum.png"><p>Open Discussion Forum</p></div></a>
+		<a href="get-back-soon.html"><div class="s-card"><img src="images/icon/course_materials.png"><p>Course Materials</p></div></a>
 	</div>
 
 <!-- Founders -->
@@ -210,18 +210,18 @@
 	<footer>
 		<div class="footer-container">
 			<div class="left-col">
-				<img src="images/icon/logo - Copy.png" style="width: 200px;">
+				<img src="images/icon/main_justlogo.png" style="width: 200px;">
 				<div class="logo"></div>
 				<div class="social-media">
-					<a href="#"><img src="images/icon\fb.png"></a>
-					<a href="#"><img src="images/icon\insta.png"></a>
+					<a href="https://www.facebook.com/share/154oaBmdSX/"><img src="images/icon\fb.png"></a>
+					<a href="https://www.instagram.com/diverge_minds_academy/"><img src="images/icon\insta.png"></a>
 					<a href="#"><img src="images/icon\tt.png"></a>
-					<a href="#"><img src="images/icon\ytube.png"></a>
+					<a href="https://www.youtube.com/@DivergeMindsAcademy"><img src="images/icon\ytube.png"></a>
 					<a href="#"><img src="images/icon\linkedin.png"></a>
 				</div><br><br>
 				<p class="rights-text">Copyright © 2024, Diverge Minds Academy</p>
 				<!-- <br><p><img src="images/icon/location.png"> Chennai Mathematical Institute<br>SIPCOT IT Park, Siruseri - 603103</p><br> -->
-				<p><img src="images/icon/phone.png"> +91-xxxx-xxx-xxx<br><img src="images/icon/mail.png">&nbsp; divergemindsacademy@gmail.com</p>
+				<p><img src="images/icon/phone.png" width="22" height="22"> +91-xxxx-xxx-xxx<br><img src="images/icon/mail.png" width="22" height="22">&nbsp; divergemindsacademy@gmail.com</p>
 			</div>
 			<div class="right-col">
 				<h1 style="color: #fff">Our Newsletter</h1>
