added linkedin link

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 					<a href="https://www.instagram.com/diverge_minds_academy/"><img src="images/icon\insta.png"></a>
 					<a href="#"><img src="images/icon\tt.png"></a>
 					<a href="https://www.youtube.com/@DivergeMindsAcademy"><img src="images/icon\ytube.png"></a>
-					<a href="#"><img src="images/icon\linkedin.png"></a>
+					<a href="https://www.linkedin.com/company/diverge-minds-academy/"><img src="images/icon\linkedin.png"></a>
 				</div><br><br>
 				<p class="rights-text">Copyright © 2024, Diverge Minds Academy</p>
 				<!-- <br><p><img src="images/icon/location.png"> Chennai Mathematical Institute<br>SIPCOT IT Park, Siruseri - 603103</p><br> -->
